--- a/.github/workflows/github-gcp-docker.yaml
+++ b/.github/workflows/github-gcp-docker.yaml
@@ -4,38 +4,23 @@ on:
   push:
     branches:
       - main
-env:
-  PROJECT_ID: ${{ secrets.GKE_PROJECT }}
-  IMAGE: dotnetapp
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Setup gcloud CLI
-        uses: google-github-actions/setup-gcloud@1bee7de035d65ec5da40a31f8589e240eba8fde5
-        with:
-          service_account_key: ${{ secrets.GCE_SA_KEY }}
-          project_id: ${{ secrets.GCE_PROJECT }}
 
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCE_SA_KEY }}
 
-      - name: Configure Docker
-        run: |
-          gcloud --quiet auth configure-docker
+      - name: Configure Docker to use gcloud credentials
+        run: gcloud auth configure-docker
 
-      - name: Build
-        run: |
-          docker build \
-          --tag "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA" \
-          --build-arg GITHUB_SHA="$GITHUB_SHA" \
-          --build-arg GITHUB_REF="$GITHUB_REF" \
+      - name: Build Docker image
+        run: docker build -t gcr.io/${{ secrets.GKE_PROJECT }}/dotnetapp:${{ github.sha }} .
 
-      - name: Publish
-        run: |
-          docker push "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA"
+      - name: Push Docker image to GCR
+        run: docker push gcr.io/${{ secrets.GKE_PROJECT }}/dotnetapp:${{ github.sha }}
