--- a/.github/workflows/github-gcp-docker.yaml
+++ b/.github/workflows/github-gcp-docker.yaml
@@ -20,7 +20,7 @@ jobs:
         run: gcloud auth configure-docker
 
       - name: Build Docker image
-        run: docker build -t gcr.io/gcp-terraform-dotnet/dotnetapp:${{ github.sha }} .
+        run: docker build -t gcr.io/${{ secrets.GCE_PROJECT }}/dotnetapp:${{ github.sha }} .
 
       - name: Push Docker image to GCR
-        run: docker push gcr.io/gcp-terraform-dotnet/dotnetapp:${{ github.sha }}
+        run: docker push gcr.io/${{ secrets.GCE_PROJECT }}/dotnetapp:${{ github.sha }}
