--- a/.github/workflows/github-gcp-docker.yaml
+++ b/.github/workflows/github-gcp-docker.yaml
@@ -34,7 +34,11 @@ jobs:
       #   run: docker push gcr.io/${{ secrets.GCE_PROJECT }}/dotnetapp:${{ github.sha }}
 
       - name: Update image tag in deployment YAML 
-        run: yq -i '.spec.template.spec.containers[0].image = $IMAGE' deployment.yaml 
+        #run: yq -i '.spec.template.spec.containers[0].image = $IMAGE' deployment.yaml 
+        run: |
+          sed -i 's/imagepath/$IMAGE/' path/to/your/file.yaml
+
+        #run: yq -i '.spec.template.spec.containers[0].image = $IMAGE' deployment.yaml 
       
       - name: Show File
         run: |
