--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: dotnetapp-container
-        image: gcpsantanubhunia/dotnetapp:v4 # Replace with your image path
+        image: imagepath # Replace with your image path
         ports:
         - containerPort: 8080
