--- a/.github/workflows/github-gcp-docker.yaml
+++ b/.github/workflows/github-gcp-docker.yaml
@@ -36,7 +36,8 @@ jobs:
       - name: Update image tag in deployment YAML 
         #run: yq -i '.spec.template.spec.containers[0].image = $IMAGE' deployment.yaml 
         run: |
-          sed -i 's/imagepath/${{env.IMAGE}}/' deployment.yaml 
+          export IMAGES=${{env.IMAGE}}
+          sed -i 's/imagepath/$IMAGES/' deployment.yaml 
 
         #run: yq -i '.spec.template.spec.containers[0].image = $IMAGE' deployment.yaml 
       
