--- a/.github/workflows/github-gcp-docker.yaml
+++ b/.github/workflows/github-gcp-docker.yaml
@@ -36,8 +36,7 @@ jobs:
       - name: Update image tag in deployment YAML 
         #run: yq -i '.spec.template.spec.containers[0].image = $IMAGE' deployment.yaml 
         run: |
-          export IMAGES=${{env.IMAGE}}
-          sed -i 's/imagepath/$IMAGES/' deployment.yaml 
+          sed -i "s/imagepath/${{ env.IMAGE }}/g" deployment.yaml 
 
         #run: yq -i '.spec.template.spec.containers[0].image = $IMAGE' deployment.yaml 
       
