--- a/.github/workflows/github-gcp-docker.yaml
+++ b/.github/workflows/github-gcp-docker.yaml
@@ -35,8 +35,9 @@ jobs:
 
       - name: Update image tag in deployment YAML 
         #run: yq -i '.spec.template.spec.containers[0].image = $IMAGE' deployment.yaml 
-        run: |
-          sed -i "s/imagepath/${{ env.IMAGE }}/g" deployment.yaml 
+        #sed -i "s/imagepath/${{ env.IMAGE }}/g" deployment.yaml 
+        run: |    
+          yq e '.spec.template.spec.containers[0].image = "gcr.io/gcp-terraform-dotnet/dotnetapp:v20"' -i deployment.yaml
 
         #run: yq -i '.spec.template.spec.containers[0].image = $IMAGE' deployment.yaml 
       
