--- a/.github/workflows/github-gcp-docker.yaml
+++ b/.github/workflows/github-gcp-docker.yaml
@@ -35,8 +35,8 @@ jobs:
 
       - name: Update image tag in deployment YAML 
         run: |    
-          yq e '.spec.template.spec.containers[0].image = "$IMAGE"' -i deployment.yaml
-
+          yq e '.spec.template.spec.containers[0].image = "${{ env.IMAGE }}"' -i deployment.yaml
+                
       - name: Show File
         run: |
           cat deployment.yaml 
