--- a/.github/workflows/github-gcr-gke.yaml
+++ b/.github/workflows/github-gcr-gke.yaml
@@ -29,8 +29,8 @@ jobs:
     - name: Get GKE Credentials
       uses: google-github-actions/get-gke-credentials@v2
       with:
-        cluster_name: dotnetapp-cluster
-        location: us-central1-c
+        cluster_name: ${{ env.GKE_CLUSTER }}
+        location: ${{ env.GKE_ZONE }}
         project_id: ${{ env.PROJECT_ID }}
 
     - name: Configure Docker to use gcloud credentials
