--- a/.github/workflows/github-azure-aks.yaml
+++ b/.github/workflows/github-azure-aks.yaml
@@ -18,41 +18,49 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }} # Or configure OIDC
      
-      # - name: Build and push Docker image
-      #   uses: docker/build-push-action@v5
-      #   with:
-      #     context: .
-      #     push: true
-      #     tags: ${{ secrets.ACR_NAME }}.azurecr.io/dotnetapp:latest
-      #     file: ./Dockerfile
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          tags: ${{ env.IMAGE }}
+          tags: acrdotnetapp.azurecr.io/dotnetapp:latest
+          file: ./Dockerfile
 
-      - name: Update image tag in deployment YAML 
-        run: |    
-          yq e '.spec.template.spec.containers[0].image = "${{ env.IMAGE }}"' -i deployment.yaml
+      # - name: Build and push Docker image
+      #   uses: docker/build-push-action@v5
+      #   with:
+      #     context: .
+      #     file: ./Dockerfile
+      #     push: true
+      #     tags: youracrname.azurecr.io/your-image-name:latest
+      # - name: Log in to Docker Hub
+      #   uses: docker/login-action@v3
+      #   with:
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Set AKS context
-        uses: azure/aks-set-context@v3
-        with:
-          resource-group: dotnetappRG
-          cluster-name: dotnetappakscluster
+      # - name: Build and push Docker image
+      #   uses: docker/build-push-action@v5
+      #   with:
+      #     context: .
+      #     push: true
+      #     tags: ${{ env.IMAGE }}
 
-      - name: Deploy to AKS
-        uses: azure/k8s-deploy@v4
-        with:
-          action: deploy
-          manifests: |
-            deployment.yaml
-            service.yaml
-          images: ${{ env.IMAGE }}
+      # - name: Update image tag in deployment YAML 
+      #   run: |    
+      #     yq e '.spec.template.spec.containers[0].image = "${{ env.IMAGE }}"' -i deployment.yaml
+
+      # - name: Set AKS context
+      #   uses: azure/aks-set-context@v3
+      #   with:
+      #     resource-group: dotnetappRG
+      #     cluster-name: dotnetappakscluster
+
+      # - name: Deploy to AKS
+      #   uses: azure/k8s-deploy@v4
+      #   with:
+      #     action: deploy
+      #     manifests: |
+      #       deployment.yaml
+      #       service.yaml
+      #     images: ${{ env.IMAGE }}
